--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </center>
 
   <p style="color: #ffff33;font-size:18px"><b>
-
- <img src="https://github.com/s3177499/My-Profile/blob/main/IMG_4039%20copy.jpeg" alt="image" height="200" width="200" style="vertical-align:right;margin:50px 50px"/> 
+<a href="https://github.com/s3177499/My-Profile/blob/main/IMG_4039%20copy.jpeg" alt="image" height="200" width="200" style="vertical-align:right;margin:50px 50px"</a> 
+ 
 
  <br>
 
