--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </center>
 
   <p style="color: #ffff33;font-size:18px"><b>
-<img src="https://github.com/s3177499/My-Profile/blob/main/IMG_4039%20copy.jpeg" alt="image" height="200" width="200" style="vertical-align:right;margin:50px 50px" <h3> Visit Seek.com</h3> /> 
+<img src="https://github.com/s3177499/My-Profile/blob/main/IMG_4039%20copy.jpeg" alt="image" height="200" width="200" style="vertical-align:right;margin:50px 50px"/> 
  
 
  <br>
