--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ During my studies I expect to learn programming languages being used currently i
 
      <img src="Pictureb.jpg.png"/>
 
-	<img src="Picturea.jpg.sb-8debffe2-brQiDN"/>
+	<img src="Picturea.png"/>
 
 	<br>
 	<br>
